@@ -245,7 +245,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${maven-surefire-plugin.version}</version>
 				<configuration>
-            		<argLine>@{argLine}</argLine>
+            		<argLine>@{argLine} --illegal-access=permit</argLine>
         		</configuration>
 				<executions>
 					<execution>
@@ -260,7 +260,7 @@
 				<artifactId>maven-failsafe-plugin</artifactId>
 				<version>${maven-failsafe-plugin.version}</version>
 				<configuration>
-            		<argLine>@{argLine}</argLine>
+            		<argLine>@{argLine} --illegal-access=permit</argLine>
         		</configuration>
 				<executions>
 					<execution>
